[gd_scene load_steps=2 format=3 uid="uid://mf4swpfckfq1"]

[ext_resource type="Script" uid="uid://gbgyul1qjek0" path="res://UI/Scripts/CreationEquipe/previsu_personnage.gd" id="1_deea6"]

[node name="PrevisuPersonnage" type="Node2D"]
script = ExtResource("1_deea6")

[node name="Cape" type="Sprite2D" parent="."]
position = Vector2(0, -43)
scale = Vector2(0.99690896, 0.9878048)

[node name="Classe" type="Sprite2D" parent="."]
position = Vector2(0, -48)
scale = Vector2(0.23, 0.23)

[node name="Cape2" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -42)

[node name="Coiffe" type="Sprite2D" parent="."]
position = Vector2(0, -44)

[node name="Coiffe2" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -44)
